chore: use stringutils and remove check on clientid